--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Fregg</title>
+  <title>REVISEARTS</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -40,9 +40,9 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
           <a class="navbar-brand mr-5" href="index.html">
-            <img src="images/logo.png" alt="">
+            <img src="images/reviseartsLogo2.png" alt="">
             <span>
-              Fregg
+              REVISEARTS
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
