--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Fregg</title>
+  <title>Revisearts</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -40,7 +40,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
           <a class="navbar-brand mr-5" href="index.html">
-            <img src="images/reviseartsLOGO1" alt="">
+            <img src="images/reviseartsLogo1.png" alt="">
             <span>
               REVISEARTS
             </span>
