--- a/index.html
+++ b/index.html
@@ -91,16 +91,15 @@
                       <h1>
                         Welcome To <br>
                         <span>
-                          Content Writing Services
+                          Graphic Designing Services
                         </span>
                       </h1>
                       <p>
-                        It is a long established fact that a reader will be distracted by the readable content of a page
-                        when looking
+                        "Revisearts - Where Creativity Meets Strategy"
                       </p>
                       <div class="btn-box">
-                        <a href="" class="btn-1">
-                          Contact Us
+                        <a href="#" class="btn-1">
+                          Learn more
                         </a>
                       </div>
                     </div>
@@ -118,15 +117,14 @@
                       <h1>
                         Welcome To <br>
                         <span>
-                          Content Writing Services
+                          Revisearts
                         </span>
                       </h1>
                       <p>
-                        It is a long established fact that a reader will be distracted by the readable content of a page
-                        when looking
+                        Elevating Your Brand with Graphic Design, Logos, Social Media, UI/UX Design, Business Analysis, and Market Research.
                       </p>
                       <div class="btn-box">
-                        <a href="" class="btn-1">
+                        <a href="#" class="btn-1">
                           Contact Us
                         </a>
                       </div>
@@ -163,12 +161,11 @@
               </h2>
             </div>
             <p>
-              It is a long established fact that a reader will be distracted by the readable content of a page when
-              looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of
-              letters, as opposed to using 'Content here, content here', making it look like readable English. Many
-              desktop publishing packages and web page editors now use Lorem Ipsum as their
+              At Revisearts, we understand that design is not just about creating pretty pictures or eye-catching logos. It's about crafting an identity for your brand that communicates your unique value proposition to your target audience. It's about creating a user experience that engages and delights your customers while driving business results. And it's about using data and insights to inform design decisions and optimize your marketing strategies.
+
+That's why we offer a comprehensive suite of design services that covers everything from graphic design and branding to social media management, UI/UX design, business analysis, and market research. Whether you're a small startup or a large enterprise, we have the expertise and resources to help you achieve your business goals through design.
             </p>
-            <a href="">
+            <a href="#">
               Get Started
             </a>
           </div>
