new update footer

--- a/index.html
+++ b/index.html
@@ -490,8 +490,8 @@ That's why we offer a comprehensive suite of design services that covers everyth
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      Copyright &copy; 2019 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      Copyright &copy; 2023 All Rights Reserved By
+      <a href="https://html.design/">Yashraj Kushwah</a>
     </p>
   </section>
   <!-- footer section -->
