--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Fregg</title>
+  <title>REVISEARTS</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -40,10 +40,8 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
           <a class="navbar-brand mr-5" href="index.html">
-            <img src="images/logo.png" alt="">
-            <span>
-              Fregg
-            </span>
+            <img src="images/reviseartsLogo2.png" alt="" />
+            <span> REVISEARTS </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -84,24 +82,32 @@
         <div class="col-md-6">
           <div class="detail-box">
             <div class="heading_container">
-              <h2>
-                About Us
-              </h2>
+              <h2>About Us</h2>
             </div>
-            <p>
-              It is a long established fact that a reader will be distracted by the readable content of a page when
-              looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of
-              letters, as opposed to using 'Content here, content here', making it look like readable English. Many
-              desktop publishing packages and web page editors now use Lorem Ipsum as their
+            <p align="justify">
+              At Revisearts, we understand that design is not just about
+              creating pretty pictures or eye-catching logos. It's about
+              crafting an identity for your brand that communicates your
+              unique value proposition to your target audience. It's about
+              creating a user experience that engages and delights your
+              customers while driving business results. And it's about using
+              data and insights to inform design decisions and optimize your
+              marketing strategies. That's why we offer a comprehensive suite
+              of design services that covers everything from graphic design
+              and branding to social media management, UI/UX design, business
+              analysis, and market research. Whether you're a small startup or
+              a large enterprise, we have the expertise and resources to help
+              you achieve your business goals through design.
             </p>
-            <a href="">
-              Get Started
-            </a>
+            <a href="#"> Get Started </a>
           </div>
         </div>
         <div class="col-md-6">
           <div class="img-box">
-            <img src="images/about-img.png" alt="">
+            <img
+              src="images/med-badr-chemmaoui-ZSPBhokqDMc-unsplash.jpg"
+              alt=""
+            />
           </div>
         </div>
       </div>
@@ -143,8 +149,8 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      Copyright &copy; 2019 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      Copyright &copy; 2023 All Rights Reserved By
+      <a href="#">Yashraj Kushwah</a>
     </p>
   </section>
   <!-- footer section -->
