--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Fregg</title>
+  <title>REVISEARTS</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -40,10 +40,8 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
           <a class="navbar-brand mr-5" href="index.html">
-            <img src="images/logo.png" alt="">
-            <span>
-              Fregg
-            </span>
+            <img src="images/reviseartsLogo2.png" alt="" />
+            <span> REVISEARTS </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,28 +84,28 @@
     <section class="contact_section">
       <div class="container">
         <div class="heading_container">
-          <h2>
-            Let's Get In Touch!
-          </h2>
+          <h2>Let's Get In Touch!</h2>
         </div>
       </div>
       <div class="container contact_bg layout_padding2-top">
         <div class="row">
           <div class="col-md-6">
-            <div class="contact_form ">
+            <div class="contact_form">
               <form action="">
-                <input type="text" placeholder="Name ">
-                <input type="email" placeholder="Email">
-                <input type="text" placeholder="Message" class="message_input">
-                <button>
-                  Send
-                </button>
+                <input type="text" placeholder="Name " />
+                <input type="email" placeholder="Email" />
+                <input
+                  type="text"
+                  placeholder="Message"
+                  class="message_input"
+                />
+                <button>Send</button>
               </form>
             </div>
           </div>
           <div class="col-md-6">
             <div class="img-box">
-              <img src="images/contact-img.jpg" alt="">
+              <img src="images/—Pngtree—contact our telephone customer service_5412847.png" alt="" />
             </div>
           </div>
         </div>
@@ -151,8 +149,8 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      Copyright &copy; 2019 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      Copyright &copy; 2023 All Rights Reserved By
+      <a href="#">Yashraj Kushwah</a>
     </p>
   </section>
   <!-- footer section -->
