--- a/service.html
+++ b/service.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Fregg</title>
+  <title>REVISEARTS</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -40,10 +40,9 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
           <a class="navbar-brand mr-5" href="index.html">
-            <img src="images/logo.png" alt="">
-            <span>
-              Fregg
-            </span>
+            <img src="images/reviseartsLogo2.png" alt="" />
+              <span> REVISEARTS </span>
+            </a>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,12 +79,10 @@
 
     <!-- service section -->
 
-    <section class="service_section ">
+    <section class="service_section">
       <div class="container">
         <div class="heading_container">
-          <h2>
-            At Your Service
-          </h2>
+          <h2>At Your Service</h2>
         </div>
       </div>
       <div class="container">
@@ -93,39 +90,37 @@
           <div class="col-md-6">
             <div class="box">
               <div class="img-box">
-                <img src="images/s-1.png" alt="">
+                <img src="images/s-1.png" alt="" />
               </div>
-              <h4>
-                Written with Love
-              </h4>
-              <p>
-                It is a long established fact that a reader will be distracted by the readable content of a page when
-                looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
-                of
-                letters, as opposed to using 'Content here, content t,
+              <h4>Graphic design and branding</h4>
+              <p align="justify">
+                Revisearts' graphic design and branding services are designed
+                to help your business stand out from the competition. Our team
+                of talented designers can create visually appealing logos,
+                business cards, brochures, flyers, banners, and other
+                marketing materials that capture your brand's essence and
+                convey your unique value proposition.
               </p>
-              <a href="">
-                Read More
-              </a>
+              <a href=""> Read More </a>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="box align-items-end align-items-md-start text-right text-md-left">
+            <div
+              class="box align-items-end align-items-md-start text-right text-md-left"
+            >
               <div class="img-box">
-                <img src="images/s-2.png" alt="">
+                <img src="images/s-2.png" alt="" />
               </div>
-              <h4>
-                Fast Turnaround
-              </h4>
-              <p>
-                It is a long established fact that a reader will be distracted by the readable content of a page when
-                looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
-                of
-                letters, as opposed to using 'Content here, content here', making it look like
+              <h4>Social media management</h4>
+              <p align="justify">
+                In addition to graphic design and branding, Revisearts also
+                offers social media management services that cover content
+                creation, community management, analytics, and reporting. Our
+                team of social media experts can help you create engaging
+                content that resonates with your target audience, build and
+                manage your online community.
               </p>
-              <a href="">
-                Read More
-              </a>
+              <a href=""> Read More </a>
             </div>
           </div>
         </div>
@@ -133,40 +128,39 @@
           <div class="col-md-6">
             <div class="box">
               <div class="img-box">
-                <img src="images/s-3.png" alt="">
+                <img src="images/s-3.png" alt="" />
               </div>
-              <h4>
-                Up to Date
-              </h4>
+              <h4>UI/UX design</h4>
               <p>
-                It is a long established fact that a reader will be distracted by the readable content of a page when
-                looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
-                of
-                letters, as opposed to using 'Content here, content here', making it look like now use Lorem Ipsum as
-                their default model text,
+                UI/UX design services that are
+                tailored to meet the needs of your business. Our expert
+                designers create engaging and user-friendly designs for
+                websites, mobile apps, e-commerce platforms, and more. We work
+                closely with you to understand your audience and business
+                goals, ensuring that the end product not only looks great, but
+                also delivers a seamless and intuitive user experience.
               </p>
-              <a href="">
-                Read More
-              </a>
+              <a href=""> Read More </a>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="box align-items-end align-items-md-start text-right text-md-left">
+            <div
+              class="box align-items-end align-items-md-start text-right text-md-left"
+            >
               <div class="img-box">
-                <img src="images/s-4.png" alt="">
+                <img src="images/s-4.png" alt="" />
               </div>
-              <h4>
-                Premium Content
-              </h4>
+              <h4>Business analysis & Market research</h4>
               <p>
-                It is a long established fact that a reader will be distracted by the readable content of a page when
-                looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
-                of
-                letters, as opposed to using 'Content here, content here', making it look like
+                Business Analysis and Market research services to help clients
+                gain a deeper understanding of their target audience,
+                competitors, and industry landscape. Our team of experts uses
+                various analytical tools and techniques such as SWOT analysis,
+                market segmentation, surveys, focus groups, and customer
+                interviews to gather insights that inform design decisions and
+                optimize marketing strategies.
               </p>
-              <a href="">
-                Read More
-              </a>
+              <a href=""> Read More </a>
             </div>
           </div>
         </div>
@@ -210,8 +204,8 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      Copyright &copy; 2019 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      Copyright &copy; 2023 All Rights Reserved By
+      <a href="#">Yashraj Kushwah</a>
     </p>
   </section>
   <!-- footer section -->
