--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                   <img src="images/s-3.png" alt="" />
                 </div>
                 <h4>UI/UX design</h4>
-                <p>
+                <p align="justify">
                   UI/UX design services that are
                   tailored to meet the needs of your business. Our expert
                   designers create engaging and user-friendly designs for
@@ -299,7 +299,7 @@
                   <img src="images/s-4.png" alt="" />
                 </div>
                 <h4>Business analysis & Market research</h4>
-                <p>
+                <p align="justify">
                   Business Analysis and Market research services to help clients
                   gain a deeper understanding of their target audience,
                   competitors, and industry landscape. Our team of experts uses
